--- a/new-customers.html
+++ b/new-customers.html
@@ -229,10 +229,25 @@
                     <input type="text"
                     class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                     placeholder="Enter Company Name">
-                    <label class="block flex-1 border py-3 px-4 rounded">
-                        <span id="fileName text-xs 2xl:text-sm text-emerald-400">Choose profile photo</span>
-                        <input type="file" class="hidden"/>
-                      </label>
+                    <div class="flex gap-2 flex-1 items-center">
+                        <label class="block flex-1 border py-3 px-4 pr-8 rounded relative">
+                            <span id="fileName" class="block text-xs 2xl:text-sm text-gray-500 w-full whitespace-nowrap overflow-hidden text-ellipsis max-w-[20rem]">Choose company logo sfsf sfsfsf sfsfds dsfdsfs sfsf sfsfsf</span>
+                            <input type="file" class="hidden"/>
+                            <svg class="w-4 h-4 absolute right-2 top-0 bottom-0 my-auto text-gray-400" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M5 21q-.825 0-1.413-.588T3 19V5q0-.825.588-1.413T5 3h14q.825 0 1.413.588T21 5v14q0 .825-.588 1.413T19 21H5Zm0-2h14V5H5v14Zm1-2h12l-3.75-5l-3 4L9 13l-3 4Zm-1 2V5v14Z"/></svg>
+                          </label>
+                          <div class="hs-tooltip inline-block [--trigger:click]">
+                            <a class="hs-tooltip-toggle block text-center" href="javascript:;">
+                              <span class="w-10 h-10 inline-flex justify-center items-center gap-2 rounded-md bg-gray-50 border border-gray-200 text-gray-600 hover:bg-emerald-50 hover:border-emerald-200 hover:text-emerald-600">
+                                <svg class="w-2.5 h-2.5" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                                  <path d="M2.27921 10.64L7.92565 4.99357C8.12091 4.79831 8.4375 4.79831 8.63276 4.99357L14.2792 10.64" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                                </svg>
+                              </span>
+                              <div class="hs-tooltip-content hs-tooltip-shown:opacity-100 hs-tooltip-shown:visible opacity-0 transition-opacity inline-block absolute invisible z-10 py-3 px-4 bg-white border text-sm text-gray-600 rounded-md shadow-md" role="tooltip">
+                                <p>Accept only png jpg</p>
+                              </div>
+                            </a>
+                          </div>
+                    </div>
                 </div>
             </div>
             <div class="mb-4 max-w-2xl flex flex-col sm:flex-row gap-3">
