--- a/employees.html
+++ b/employees.html
@@ -233,10 +233,10 @@
         <div class="mt-3">
             <div id="tabs-with-underline-1" role="tabpanel" aria-labelledby="tabs-with-underline-item-1">
                 <div class="flex flex-col">
-                    <div class="-m-1.5 overflow-x-auto">
-                        <div class="p-1.5 min-w-full inline-block align-middle">
+                    <div class="-m-1.5">
+                        <div class="p-1.5 min-w-full block align-middle">
                             <div class="overflow-hidden">
-                                <table class="min-w-full divide-y divide-gray-200">
+                                <table id="datatable" class="min-w-full divide-y divide-gray-200">
                                     <thead>
                                         <tr>
                                             <th scope="col" class="pl-6 py-3 text-left">
@@ -581,6 +581,11 @@
         </div>
     </div>
     <script src="./assets/js/preline.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script>
+        let datatable = new DataTable("#datatable", {scrollX: true});
+    </script>
 </body>
 
 </html>
