--- a/testing.html
+++ b/testing.html
@@ -333,6 +333,17 @@
     </div>
   </div>
 
+
+  <div class="flex animate-pulse">
+    <div class="flex-shrink-0">
+      <span class="size-12 block bg-gray-200 rounded-full"></span>
+    </div>
+  </div>
+
+  <div class="animate-spin inline-block size-4 border-[3px] border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500" role="status" aria-label="loading">
+    <span class="sr-only">Loading...</span>
+  </div>
+
   <script src="./assets/js/preline.js"></script>
 </body>
 
