--- a/login_new.html
+++ b/login_new.html
@@ -118,7 +118,30 @@
 <body>
     <div class="min-h-screen flex flex-col p-0 sm:p-4 md:p-6 xl:p-8 2xl:p-10 bg-gray-100 dark:bg-[#0e2320]">
         <div class="bg-white rounded-2xl flex-1 flex flex-col dark:bg-[#071A1C] relative">
-            <div class="login_form_wrapper w-full max-w-2xl flex flex-col items-center mx-auto px-4 my-auto">
+            <div class="login_form_wrapper w-full max-w-2xl flex flex-col items-center mx-auto px-4 my-auto py-6">
+                <div class="flex justify-end mb-4">
+                    <!-- Switch/Toggle -->
+                    <div class="relative inline-block">
+                        <input data-hs-theme-switch="" type="checkbox" id="hs-default-switch-with-icons" class="peer relative w-[3.25rem] h-7 p-px bg-gray-100 border-transparent text-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 disabled:opacity-50 disabled:pointer-events-none checked:bg-none checked:text-neutral-800 dark:bg-neutral-800 dark:border-neutral-700 dark:checked:bg-[#172F2B] focus:ring-transparent focus:bg-white hover:bg-white dark:focus:bg-[#172F2B] hover:bg-transparent dark:hover:bg-[#172F2B]
+                    
+                        before:inline-block before:size-6 before:bg-white before:translate-x-0 checked:before:translate-x-full before:rounded-full before:shadow before:transform before:ring-0 before:transition before:ease-in-out before:duration-200">
+                        <label for="hs-default-switch-with-icons" class="sr-only">Dark/Light Switch</label>
+                        <span class="peer-checked:text-white text-gray-500 size-6 absolute top-0.5 start-0.5 flex justify-center items-center pointer-events-none transition-colors ease-in-out duration-200 dark:text-neutral-500">
+                        <!-- <svg class="flex-shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 6 6 18"></path>
+                            <path d="m6 6 12 12"></path>
+                        </svg> -->
+                        <svg class="flex-shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 36 36"><path fill="#ffac33" d="M16 2s0-2 2-2s2 2 2 2v2s0 2-2 2s-2-2-2-2zm18 14s2 0 2 2s-2 2-2 2h-2s-2 0-2-2s2-2 2-2zM4 16s2 0 2 2s-2 2-2 2H2s-2 0-2-2s2-2 2-2zm5.121-8.707s1.414 1.414 0 2.828s-2.828 0-2.828 0L4.878 8.708s-1.414-1.414 0-2.829c1.415-1.414 2.829 0 2.829 0zm21 21s1.414 1.414 0 2.828s-2.828 0-2.828 0l-1.414-1.414s-1.414-1.414 0-2.828s2.828 0 2.828 0zm-.413-18.172s-1.414 1.414-2.828 0s0-2.828 0-2.828l1.414-1.414s1.414-1.414 2.828 0s0 2.828 0 2.828zm-21 21s-1.414 1.414-2.828 0s0-2.828 0-2.828l1.414-1.414s1.414-1.414 2.828 0s0 2.828 0 2.828zM16 32s0-2 2-2s2 2 2 2v2s0 2-2 2s-2-2-2-2z"/><circle cx="18" cy="18" r="10" fill="#ffac33"/></svg>
+                        </span>
+                        <span class="peer-checked:text-neutral-800 text-gray-500 size-6 absolute top-0.5 end-0.5 flex justify-center items-center pointer-events-none transition-colors ease-in-out duration-200 dark:text-neutral-500">
+                        <!-- <svg class="flex-shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="20 6 9 17 4 12"></polyline>
+                        </svg> -->
+                        <svg class="flex-shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 256 256"><path fill="currentColor" d="M240 96a8 8 0 0 1-8 8h-16v16a8 8 0 0 1-16 0v-16h-16a8 8 0 0 1 0-16h16V72a8 8 0 0 1 16 0v16h16a8 8 0 0 1 8 8m-96-40h8v8a8 8 0 0 0 16 0v-8h8a8 8 0 0 0 0-16h-8v-8a8 8 0 0 0-16 0v8h-8a8 8 0 0 0 0 16m65.14 94.33A88.07 88.07 0 0 1 105.67 46.86a8 8 0 0 0-10.6-9.06A96 96 0 1 0 218.2 160.93a8 8 0 0 0-9.06-10.6"/></svg>
+                        </span>
+                    </div>
+                    <!-- End Switch/Toggle -->
+                </div>
                 <div class="logo flex items-center gap-2 mb-4">
                     <img src="./assets/images/prime_logo_icon.svg" class="h-16 w-auto" alt="">
                     <img src="./assets/images/prime_logo_text.svg" class="h-8 w-auto dark:brightness-0 dark:invert"
@@ -189,22 +212,9 @@
                 alt="">
             <img class="decor_img_2 absolute top-0 w-1/5 hidden sm:block" style="right: 1.5rem;" src="./assets/images/decor_img_2.png"
                 alt="">
-            <div class="absolute left-0 top-0 w-1/12 aspect-square overflow-hidden rounded-2xl">
+            <div class="absolute left-0 top-0 w-1/6 aspect-square overflow-hidden rounded-2xl">
                 <img src="./assets/images/decor_circle.svg" class="decor_circle w-full h-full"
                     style="transform: translate(-25%, -25%);" alt="" srcset="">
-
-                    <div class="absolute w-max h-max" style="left: 25%; top: 25%;">
-                        <button type="button"
-                            class="hs-dark-mode-active:hidden block hs-dark-mode group flex items-center text-gray-600 hover:text-black"
-                            data-hs-theme-click-value="dark">
-                            <svg class="flex-shrink-0 size-8" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 26 26"><g fill="none"><defs><mask id="pepiconsPopMoonCircleFilled0"><path fill="#fff" d="M0 0h26v26H0z"/><path fill="#000" fill-rule="evenodd" d="M11.764 9.128a4.506 4.506 0 0 1 2.6-3.196c.93-.41.727-1.784-.281-1.908c-4.612-.566-8.921 2.498-9.895 7.078c-1.035 4.87 2.067 9.656 6.93 10.69c4.862 1.033 9.642-2.078 10.677-6.947a9.045 9.045 0 0 0 .195-2.166c-.032-1.019-1.388-1.343-1.877-.449a4.504 4.504 0 0 1-4.885 2.245a4.505 4.505 0 0 1-3.464-5.347m-.23 10.708c-3.782-.804-6.195-4.528-5.39-8.318a7.022 7.022 0 0 1 4.727-5.23a6.512 6.512 0 0 0-1.063 2.424c-.747 3.516 1.493 6.973 5.005 7.72a6.487 6.487 0 0 0 4.636-.751c-1.273 3.053-4.57 4.866-7.916 4.155" clip-rule="evenodd"/></mask></defs><circle cx="13" cy="13" r="13" fill="currentColor" mask="url(#pepiconsPopMoonCircleFilled0)"/></g></svg>
-                        </button>
-                        <button type="button"
-                        class="hs-dark-mode-active:block hidden hs-dark-mode group flex items-center text-white hover:text-orange-200"
-                        data-hs-theme-click-value="light">
-                            <svg class="flex-shrink-0 size-8" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 26 26"><g fill="none"><defs><mask id="pepiconsPopSunCircleFilled0"><path fill="#fff" d="M0 0h26v26H0z"/><g fill="#000"><path fill-rule="evenodd" d="M13 17a4 4 0 1 0 0-8a4 4 0 0 0 0 8m0-6a2 2 0 1 1 0 4a2 2 0 0 1 0-4" clip-rule="evenodd"/><path d="M3.5 13a1 1 0 0 1 1-1h2a1 1 0 0 1 0 2h-2a1 1 0 0 1-1-1m15 0a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1M17 17a1 1 0 0 1 1.414 0l1.414 1.414a1 1 0 1 1-1.414 1.414L17 18.414A1 1 0 0 1 17 17M6 6a1 1 0 0 1 1.414 0l1.414 1.414a1 1 0 1 1-1.414 1.414L6 7.414A1 1 0 0 1 6 6m7 12.5a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1m0-15a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1M19.828 6a1 1 0 0 1 0 1.414l-1.414 1.414A1 1 0 1 1 17 7.414L18.414 6a1 1 0 0 1 1.414 0m-11 12.414l-1.414 1.414A1 1 0 1 1 6 18.414L7.414 17a1 1 0 0 1 1.414 1.414"/></g></mask></defs><circle cx="13" cy="13" r="13" fill="currentColor" mask="url(#pepiconsPopSunCircleFilled0)"/></g></svg>
-                        </button>
-                    </div>
             </div>
             <div class="absolute bottom-0 right-0 overflow-hidden flex items-end rounded-2xl"
                 style="width: 25%; aspect-ratio: 1;">
